@@ -11,6 +11,7 @@ Changes:
 - Add minidlna. (CLI only)
 - Add VirtualBox with WebSocket VNC server. (x86 and x64 only)
 - Add phpVirtualBox and noVNC(HTML5/WebSocket VNC client) for VM management.
+- Add ability to mount exFAT disk.
 - Remove usesendfile on CIFS/SMB.
 - Upgrade bash 4.3 to patch 42.
 - Upgrade lighttpd to 1.4.37.
